<resources>
    <string name="app_name">StudyMate</string>
    <string name="courseTitle">Course Name</string>
    <string name="courseCode">Course Code</string>
    <string name="semesterTitle">Semester Title</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="courseCredit">Credit</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="teacherEmail">Email</string>
    <string name="teacherMobile">Mobile</string>
    <string name="designation">Designation</string>
    <string name="teacherName">Name</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="submitDate">Submit Date</string>
    <string name="assignmettopic">Assignment Topic</string>
    <string name="status">Status</string>
    <string name="testDate">Test Date</string>
    <string name="testTopic">Test Topic</string>
    <string name="today">Today</string>
    <string name="topic">Topic</string>
    <string name="assignment">You Have A Assignment Today</string>
    <string name="classtest">You Have a Class Test Today</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="period">Period</string>
</resources>
