<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_notification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sumon.studymate.activity.ClassTestNotificationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ten"
        android:background="@drawable/ic_bg"
        android:text="@string/classtest"
        android:textSize="@dimen/twintySp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_text_bg_badge"
        android:orientation="vertical">

        <TextView
            android:id="@+id/todayDateTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/ten"
            android:text="@string/today"
            android:textSize="@dimen/eighteensp" />

        <TextView
            android:id="@+id/topicTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/ten"
            android:text="@string/topic"
            android:textSize="@dimen/eighteensp" />

        <TextView
            android:id="@+id/semesterNameNotiTV"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/ten"
            android:text="@string/semesterTitle"
            android:textSize="@dimen/eighteensp" />

        <TextView
            android:id="@+id/courseNameNotiTV"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/ten"
            android:text="course"
            android:textSize="@dimen/eighteensp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:onClick="goToHomeFromTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten"
            android:background="@drawable/ic_text_bg_badge"
            android:padding="@dimen/ten"
            android:text="go to Home" />

    </LinearLayout>
</LinearLayout>
