<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/tools"
    android:id="@+id/assignmentCardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:layout_margin="@dimen/ten"
    android:foreground="?android:attr/selectableItemBackground"
    cardView:cardCornerRadius="@dimen/fifty"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/ten"
        android:weightSum="12">

        <TextView
            android:paddingTop="@dimen/ten"
            android:id="@+id/assignmentNameTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="left"
            android:text="Assignment Name"
            android:textSize="@dimen/twinty" />

        <TextView
            android:id="@+id/submitDateTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="left"
            android:paddingTop="@dimen/ten"
            android:text="@string/submitDate" />


        <TextView
            android:id="@+id/semesterAssignmentTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="left"
            android:paddingTop="@dimen/ten"
            android:text="@string/semesterTitle" />
        <TextView
            android:id="@+id/courseAssignmentTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="left"
            android:paddingTop="@dimen/ten"
            android:text="@string/courseTitle" />
        <TextView
            android:id="@+id/teacherAssignmentTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="left"
            android:paddingTop="@dimen/ten"
            android:text="@string/teacherName" />

        <TextView
            android:id="@+id/statusTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="left"
            android:paddingTop="@dimen/ten"
            android:text="@string/status" />

        <LinearLayout
            android:paddingTop="@dimen/ten"
            android:layout_width="@dimen/one_hundred_fifty"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageButton
                android:id="@+id/assignmentEditBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/five"
                android:background="@drawable/ic_text_bg_badge"
                android:src="@android:drawable/ic_menu_edit" />

            <ImageButton
                android:id="@+id/assignmentDeleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ic_text_bg_badge"
                android:src="@android:drawable/ic_delete" />


        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>
