<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/ten">


    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:cardView="http://schemas.android.com/tools"
        android:id="@+id/semesteCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:foreground="?android:attr/selectableItemBackground"
        cardView:cardCornerRadius="@dimen/fifty">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/ten"
            android:weightSum="8">

            <TextView
                android:id="@+id/semesterNameTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="left"
                android:paddingTop="@dimen/ten"
                android:text="Semester Name"
                android:textSize="@dimen/twinty" />

            <TextView
                android:id="@+id/semesterStartDateTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="left"
                android:paddingTop="@dimen/ten"
                android:text="@string/startDate" />


            <TextView
                android:id="@+id/semesterEndDateTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="left"
                android:paddingTop="@dimen/ten"
                android:text="@string/endDate" />
            <TextView
                android:id="@+id/semesterStatusTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="left"
                android:paddingTop="@dimen/ten"
                android:text="@string/status" />
            <LinearLayout
                android:layout_width="@dimen/one_hundred_fifty"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="horizontal"
                android:paddingTop="@dimen/ten"
                android:weightSum="2">

                <ImageButton
                    android:id="@+id/semesterEditBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/five"
                    android:layout_weight="1"
                    android:background="@drawable/ic_text_bg_badge"
                    android:src="@android:drawable/ic_menu_edit" />

                <ImageButton
                    android:id="@+id/semesterDeleteBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ic_text_bg_badge"
                    android:src="@android:drawable/ic_delete" />


            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>