<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sumon.studymate.activity.AddSemesterActivity"
    >

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/semesterTitleET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/semesterTitle"
        android:background="@drawable/ic_bg"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      <EditText
          android:textColor="@android:color/black"
          android:padding="5dp"
          android:layout_weight=".80"
          android:layout_width="0dp"
          android:layout_height="50dp"
          android:hint="@string/startDate"
          android:id="@+id/startDateET"
          android:inputType="datetime"
          android:enabled="false"
          android:layout_gravity="center"
          android:background="@drawable/ic_bg"/>

     <ImageButton
         android:layout_marginLeft="5dp"
         android:padding="5dp"
         android:layout_weight=".20"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:src="@mipmap/ic_datepicker"
         android:id="@+id/datePicImageBtn"
         android:background="@drawable/ic_bg"/>
  </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:padding="5dp"
            android:layout_weight=".80"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/endDate"
            android:id="@+id/endDateET"
            android:inputType="datetime"
            android:enabled="false"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:background="@drawable/ic_bg"/>
        <ImageButton
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:layout_weight=".20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_datepicker"
            android:id="@+id/datePicImageBtn2"
            android:background="@drawable/ic_bg"/>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset"
        android:onClick="resetData"
        android:background="@drawable/ic_bg"/>
    <Button
        android:id="@+id/btnAddSemester"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add"
        android:onClick="next"
        android:background="@drawable/ic_bg"/>

    <Button
        android:id="@+id/btnUpdateSemester"
        android:visibility="gone"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update"
        android:onClick="next"
        android:background="@drawable/ic_bg"/>
</LinearLayout>
</LinearLayout>
